# connectfour

./: .gitignore  4clib.c  4clib.h  4clibtest.c  CMakeLists.txt  ConnectFourTypes.h  Logger.c  Logger.h  README.md  cblib.c  cblibtest.c  connect_four_types.h
Client/: ConnectFour.c  network_controll.c  network_controll.h
